my-development-storefront/wwwroot/css/site.scss
// Add your SASS styles here

@mixin color-mode($mode: light, $root: false) {
    @if $color-mode-type == "media-query" {
        @if $root == true {
            @media (prefers-color-scheme: $mode) {
                :root {
                    @content;
                }
            }
        }
        @else {
            @media (prefers-color-scheme: $mode) {
                @content;
            }
        }
    }
    @else {
        [data-bs-theme="#{$mode}"] {
            @content;
        }
    }
}

$color-mode-type: data;

:root {  
   --wo-background-color: rgba(0, 0, 0, .1);  
   --bs-blue-rgb: 0, 123, 255; /* Added variable for blue color */  
   --bs-green-rgb: 40, 167, 69; /* Added variable for green color */  
}



html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
}

.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
  color: var(--bs-secondary-color);
  text-align: end;
}

.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
  text-align: start;
}

.b-example-divider {
    width: 100%;
    height: 3rem;
    background-color: var(--wo-background-color) !important;
/*    border: solid rgba(0, 0, 0, .15);
    border-width: 1px 0;*/
/*    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);*/
}

@include color-mode(light){
    .body-section {
        box-shadow: 0 .5em 1.5em rgba(0, 0, 0, .1), 0 -.5em 1.5em rgba(0, 0, 0, .1), 0 .125em .5em rgba(0, 0, 0, .15), 0 -.125em .5em rgba(0, 0, 0, .15);
    }
}
@include color-mode(dark) {
    .body-section {  
       box-shadow: 0 .5em 1.5em rgba(255, 255, 255, .1), 0 -.5em 1.5em rgba(255, 255, 255, .1), 0 .125em .5em rgba(255, 255, 255, .15), 0 -.125em .5em rgba(255, 255, 255, .15);  
    }
}

.wo-body-background {
    background-color: var(--wo-background-color);
    padding-inline: 5px;
}

.card {
z-index: 1 !important;
}

.dropdown {
z-index:2 !important;
}

.svg-font {
    stroke: var(--bs-emphasis-color);
}

ul.right-marker {
    list-style-type: none;
  
}


/*
#ghost-img {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    background-size: cover;
    background-image: url(/images/clients/ghost.jpg);

}*/

.dropdown-item.active, .dropdown-item:active {
    color: var(--bs-dropdown-link-active-color);
    text-decoration: none;
    background-color: #05a705;
}

#hello-world-svg-mobile-container svg {
    height: 100%;
}

#hello-world-svg-mobile-container {
    /*        margin: -112px 0;*/
    height: 40vw;
    max-height: 200px;
    overflow: hidden;
    display:flex;
    justify-content: center
}



#iframe-bethowen-watercolors::-webkit-scrollbar {
        display: none;

        -ms-overflow-style: none;  /* Internet Explorer 10+ */
        scrollbar-width: none;  /* Firefox */

}

.ff-consolas {

    font-family: Consolas;

}

.form-control {

    margin-bottom: 5px;

}

.auth-form {

    width: fit-content;
}


.tooltip2 {
    width: max-content;
    position: absolute;
    top: 0;
    left: 0;
    background: #222;
    color: white;
    font-weight: bold;
    padding: 5px;
    border-radius: 4px;
    font-size: 90%;
    display: none;
}





@include color-mode(dark) {
    .underglow {
        //box-shadow: 0 0 5px rgba(var(--bs-green-rgb), 0.5), 0 0 10px rgba(var(--bs-green-rgb), 0.4), 0 0 15px rgba(var(--bs-green-rgb), 0.3), 0 0 20px rgba(var(--bs-green-rgb), 0.2);
        box-shadow: 0 0 5px rgba(var(--bs-blue-rgb), 0.5), 0 0 10px rgba(var(--bs-blue-rgb), 0.4), 0 0 15px rgba(var(--bs-blue-rgb), 0.3), 0 0 20px rgba(var(--bs-blue-rgb), 0.2);
    }
}
@include color-mode(light) {
    .underglow {
        box-shadow: 0 0 5px rgba(var(--bs-green-rgb), 0.5), 0 0 10px rgba(var(--bs-green-rgb), 0.4), 0 0 15px rgba(var(--bs-green-rgb), 0.3), 0 0 20px rgba(var(--bs-green-rgb), 0.2);
    }
}

.breadcrumb-item:not(.active) {
    border-bottom: 4px solid white;
    cursor: pointer;

    &:hover {
        color: blue;
        border-bottom: 4px solid blue;
    }
}

.accordion-item {
    border: none;
}


.modal-header > div:first-of-type {
    flex-grow: 1;
}

